# Spanish-Travel-Companion

./: .gitignore  ATTRIBUTION.md  README.md  SETUP.md
backend/: main_backend.py  pyproject.toml  requirements.txt
frontend/app/: page.tsx
